--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -3448,83 +3448,87 @@
     "context": "GiftCardCreateDialog title",
     "string": "Issue gift card"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_GiftCardUpdateBalanceDialog_dot_changeButtonLabel": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdateBalanceDialog_dot_changeButtonLabel": {
     "context": "GiftCardUpdateDetailsCard set balance dialog change button label",
     "string": "Change"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_GiftCardUpdateBalanceDialog_dot_subtitle": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdateBalanceDialog_dot_subtitle": {
     "context": "GiftCardUpdateDetailsCard set balance dialog subtitle",
     "string": "What would you like to set cards balance to. When you change the balance both values will be changed"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_GiftCardUpdateBalanceDialog_dot_title": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdateBalanceDialog_dot_title": {
     "context": "GiftCardUpdateDetailsCard set balance button label",
     "string": "Set balance"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_GiftCardUpdateBalanceDialog_dot_updatedSuccessAlertTitle": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdateBalanceDialog_dot_updatedSuccessAlertTitle": {
     "context": "GiftCardUpdateDetailsCard update success alert title",
     "string": "Successfully updated card balance"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_GiftCardUpdateDetailsCard_dot_cardBalanceLabel": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdateDetailsCard_dot_cardBalanceLabel": {
     "context": "GiftCardUpdateDetailsCard card balance label",
     "string": "Card Balance"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_GiftCardUpdateDetailsCard_dot_setBalanceButtonLabel": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdateDetailsCard_dot_setBalanceButtonLabel": {
     "context": "GiftCardUpdateDetailsCard set balance button label",
     "string": "set balance"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_GiftCardUpdateDetailsCard_dot_title": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdateDetailsCard_dot_title": {
     "context": "GiftCardUpdateDetailsCard title",
     "string": "Details"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_GiftCardUpdateInfoCard_dot_boughtByLabel": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdateInfoCard_dot_boughtByLabel": {
     "context": "GiftCardUpdateInfoCard bought by label",
     "string": "Bought by"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_GiftCardUpdateInfoCard_dot_creationLabel": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdateInfoCard_dot_creationLabel": {
     "context": "GiftCardUpdateInfoCard creation label",
     "string": "Creation"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_GiftCardUpdateInfoCard_dot_issuedByAppLabel": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdateInfoCard_dot_issuedByAppLabel": {
     "context": "GiftCardUpdateInfoCard issued by app label",
     "string": "Issued by app"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_GiftCardUpdateInfoCard_dot_issuedByLabel": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdateInfoCard_dot_issuedByLabel": {
     "context": "GiftCardUpdateInfoCard issued by label",
     "string": "Issued by"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_GiftCardUpdateInfoCard_dot_orderNumberLabel": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdateInfoCard_dot_orderNumberLabel": {
     "context": "GiftCardUpdateInfoCard order number label",
     "string": "Order number"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_GiftCardUpdateInfoCard_dot_productLabel": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdateInfoCard_dot_productLabel": {
     "context": "GiftCardUpdateInfoCard product label",
     "string": "Product bought to get gift card"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_GiftCardUpdateInfoCard_dot_title": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdateInfoCard_dot_title": {
     "context": "GiftCardUpdateInfoCard title",
     "string": "Card information"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_GiftCardUpdateInfoCard_dot_usedByLabel": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdateInfoCard_dot_usedByLabel": {
     "context": "GiftCardUpdateInfoCard used by label",
     "string": "Used by"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_GiftCardUpdatePageHeader_dot_disableLabel": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdatePageHeader_dot_disableLabel": {
     "context": "GiftCardEnableDisableSection enable label",
     "string": "Disable"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_GiftCardUpdatePageHeader_dot_enableLabel": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdatePageHeader_dot_enableLabel": {
     "context": "GiftCardEnableDisableSection enable label",
     "string": "Enable"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_GiftCardUpdatePageHeader_dot_successfullyDisabledTitle": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdatePageHeader_dot_successfullyDisabledTitle": {
     "context": "GiftCardEnableDisableSection disable success",
     "string": "Successfully disabled gift card"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_GiftCardUpdatePageHeader_dot_successfullyEnabledTitle": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdatePageHeader_dot_successfullyEnabledTitle": {
     "context": "GiftCardEnableDisableSection enable success",
     "string": "Successfully enabled gift card"
   },
-  "src_dot_giftCards_dot_GiftCardUpdatePage_dot_title": {
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_notFound": {
+    "context": "giftCardErrorMessages not found",
+    "string": "Couldn't find gift card"
+  },
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_title": {
     "context": "GiftCardUpdateDetailsCard title",
     "string": "Details"
   },
@@ -3575,6 +3579,26 @@
   "src_dot_giftCards_dot_GiftCardsList_dot_settings": {
     "context": "GiftCardsListHeader menu item settings",
     "string": "Settings"
+  },
+  "src_dot_giftCards_dot_components_dot_GiftCardDeleteDialog_dot_consentLabel": {
+    "context": "GiftCardDeleteDialog consent label",
+    "string": "{selectedItemsCount,plural,one{I am aware that I am removing a gift card with balance} other{I am aware that I am removing gift cards with balance}}"
+  },
+  "src_dot_giftCards_dot_components_dot_GiftCardDeleteDialog_dot_defaultDescription": {
+    "context": "GiftCardDeleteDialog default description",
+    "string": "{selectedItemsCount,plural,one{Are you sure you want to delete this gift card?} other{Are you sure you want to delete {selectedItemsCount} giftCards?}}"
+  },
+  "src_dot_giftCards_dot_components_dot_GiftCardDeleteDialog_dot_deleteSuccessAlertText": {
+    "context": "GiftCardDeleteDialog success alert text",
+    "string": "{selectedItemsCount,plural,one{Successfully deleted gift card} other{Successfully deleted gift cards}}"
+  },
+  "src_dot_giftCards_dot_components_dot_GiftCardDeleteDialog_dot_title": {
+    "context": "GiftCardDeleteDialog single title",
+    "string": "{selectedItemsCount,plural,one{Delete Gift Card} other{Delete Gift Cards}}"
+  },
+  "src_dot_giftCards_dot_components_dot_GiftCardDeleteDialog_dot_withBalanceDescription": {
+    "context": "GiftCardDeleteDialog with balance description",
+    "string": "{selectedItemsCount,plural,one{The gift card you are about to delete has available balance. By deleting this card you may remove balance available to your customer.} other{You are about to delete gift cards with available balance. Are you sure you want to do that?}}"
   },
   "src_dot_giftCards_dot_components_dot_GiftCardExpirySelect_dot_expirationDateLabel": {
     "context": "GiftCarUpdateDetailsExpirySection expiration date label",
