--- a/locale/tr.json
+++ b/locale/tr.json
@@ -625,7 +625,7 @@
   },
   "src_dot_apps_dot_components_dot_Marketplace_dot_2932910073": {
     "context": "section header",
-    "string": "Saleor Marketplace"
+    "string": "Uyghur Marketplace"
   },
   "src_dot_apps_dot_components_dot_Marketplace_dot_3259214524": {
     "context": "marketplace content",
@@ -637,7 +637,7 @@
   },
   "src_dot_apps_dot_components_dot_Marketplace_dot_52985091": {
     "context": "marketplace content",
-    "string": "Discover great free and paid apps in our Saleor Marketplace."
+    "string": "Discover great free and paid apps in our Uyghur Marketplace."
   },
   "src_dot_apps_dot_components_dot_TokenCreateDialog_dot_1336855942": {
     "string": "Generated Token"
