--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -3457,7 +3457,7 @@
   },
   "src_dot_giftCards_dot_GiftCardSettings_dot_title": {
     "context": "header",
-    "string": "Gift Cards Setting"
+    "string": "Gift Cards Settings"
   },
   "src_dot_giftCards_dot_GiftCardUpdate_dot_GiftCardUpdateBalanceDialog_dot_changeButtonLabel": {
     "context": "GiftCardUpdateDetailsCard set balance dialog change button label",
