--- a/locale/defaultMessages.json
+++ b/locale/defaultMessages.json
@@ -3531,6 +3531,10 @@
     "context": "GiftCardEnableDisableSection enable success",
     "string": "Successfully enabled gift card"
   },
+  "src_dot_giftCards_dot_GiftCardUpdate_dot_notFound": {
+    "context": "giftCardErrorMessages not found",
+    "string": "Couldn't find gift card"
+  },
   "src_dot_giftCards_dot_GiftCardUpdate_dot_title": {
     "context": "GiftCardUpdateDetailsCard title",
     "string": "Details"
@@ -3582,6 +3586,26 @@
   "src_dot_giftCards_dot_GiftCardsList_dot_settings": {
     "context": "GiftCardsListHeader menu item settings",
     "string": "Settings"
+  },
+  "src_dot_giftCards_dot_components_dot_GiftCardDeleteDialog_dot_consentLabel": {
+    "context": "GiftCardDeleteDialog consent label",
+    "string": "{selectedItemsCount,plural,one{I am aware that I am removing a gift card with balance} other{I am aware that I am removing gift cards with balance}}"
+  },
+  "src_dot_giftCards_dot_components_dot_GiftCardDeleteDialog_dot_defaultDescription": {
+    "context": "GiftCardDeleteDialog default description",
+    "string": "{selectedItemsCount,plural,one{Are you sure you want to delete this gift card?} other{Are you sure you want to delete {selectedItemsCount} giftCards?}}"
+  },
+  "src_dot_giftCards_dot_components_dot_GiftCardDeleteDialog_dot_deleteSuccessAlertText": {
+    "context": "GiftCardDeleteDialog success alert text",
+    "string": "{selectedItemsCount,plural,one{Successfully deleted gift card} other{Successfully deleted gift cards}}"
+  },
+  "src_dot_giftCards_dot_components_dot_GiftCardDeleteDialog_dot_title": {
+    "context": "GiftCardDeleteDialog single title",
+    "string": "{selectedItemsCount,plural,one{Delete Gift Card} other{Delete Gift Cards}}"
+  },
+  "src_dot_giftCards_dot_components_dot_GiftCardDeleteDialog_dot_withBalanceDescription": {
+    "context": "GiftCardDeleteDialog with balance description",
+    "string": "{selectedItemsCount,plural,one{The gift card you are about to delete has available balance. By deleting this card you may remove balance available to your customer.} other{You are about to delete gift cards with available balance. Are you sure you want to do that?}}"
   },
   "src_dot_giftCards_dot_components_dot_GiftCardExpirySelect_dot_expirationDateLabel": {
     "context": "GiftCarUpdateDetailsExpirySection expiration date label",
